# sphinx-conda

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
docs/_templates/: environment.html  environment_index.html
environments/: basic.yml  dev-environment.yml  test.yml
src/sphinx_conda/: __init__.py  domain.py  model.py  plugin.py  util.py
src/sphinx_conda/directives/: __init__.py  environment.py  package_table.py
stackdocs/: util.py
