[build-system]
# Defined by PEP 518
requires = [
  "setuptools>=42",
  "wheel",
]
build-backend = "setuptools.build_meta"


[tool.black]
target-version = ['py39']
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"