[metadata]
author = James Penn
description =
    A Sphinx extension for documenting conda environments
download_url = https://github.com/jamesp/sphinx-conda
keywords =
    sphinx
    conda
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = sphinx-conda
project_urls =
    Code = https://github.com/jamesp/sphinx-conda
    Discussions = https://github.com/jamesp/sphinx-conda/discussions
    Documentation = https://github.com/jamesp/sphinx-conda
    Issues = https://github.com/jamesp/sphinx-conda/issues
url = https://github.com/jamesp/sphinx-conda
version = attr: sphinx_conda.__version__

[options]
include_package_data = True
install_requires =
    sphinx
    pyyaml
    pydantic
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    isort
    pre-commit